--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: BirdFlowExtras
 Type: Package
 Title: Extend BirdFlowR migration model functionality
-Version: 0.0.0.9002
+Version: 0.0.0.9003
 Authors@R: 
     person("Ethan", "Plunkett",  email = "plunkett@umass.edu", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-4405-2251"))
@@ -22,8 +22,7 @@ Suggests:
     testthat (>= 3.0.0)
 Imports:
     BirdFlowR,
-    MigConnectivity,
-    sf, 
+    dplyr,
     rlang
 Remotes:
     birdflow-science/BirdFlowModels,
